# Quatro

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: params.yaml  patchwork_params.yaml
examples/: run_global_registration.cpp
include/: conversion.hpp  fpfh_manager.hpp  imageProjection.hpp  patchwork.hpp  quatro.hpp  utility.h
include/quatro/: fpfh.h  matcher.h  quatro_module.h
include/teaser/: graph.h  registration.h  utils.h
include/teaser_utils/: feature_matcher.h  fpfh.h
launch/: quatro.launch
rviz/: reg_output.rviz  registration.rviz
src/: fpfh.cc  graph.cc  matcher.cc  quatro_module.cc  registration.cc
src/teaser_utils/: feature_matcher.cc  fpfh.cc
